--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 fillColor: "#304DBE",
                 fillOpacity: 0.5
             },
-            host = "http://114.116.67.239:8090",
+            host = "https://iserver.supermap.io",
                 // document.location.toString().match(/file:\/\//) ? "http://114.116.67.239:8090" : 'http://' + document.location.host;
         url = host + "/iserver/services/map-China/rest/maps/China",
         url2 = host+"/iserver/services/data-China/rest/data",
